# Copyright Amazon.com, Inc. or its affiliates. All Rights Reserved.
# SPDX-License-Identifier: Apache-2.0

# Installation project.
# Each project in GameKit should contain an install() command to copy its output
# and dependencies to the instal directory.

cmake_minimum_required(VERSION 3.20)

project(aws-gamekit-cpp-install)
